--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
  color : hsl(0, 0%, 100%);
 }
 /*Font and weight for p*/
-p{
+p,.tailleEth{
   font-family:'Outfit', sans-serif;
   font-weight: bold;
 }
@@ -38,39 +38,107 @@ p{
   }
   /*Size logo ethereum*/
   .ether {
-    max-width: 15px; 
-    height: 15px;
+    max-width: 18px; 
+    height: 18px;
+    position: relative;
+    bottom: 0.5em;
+    /*margin-bottom: 0px;
+    margin-top: 5px;*/
     
- }
+    }
  /*Size price eth*/
  .tailleEth {
-  font-size: 21px; 
+  font-size: 15px; 
   color: hsl(178, 100%, 50%);
   font-weight: 600;
+  margin-bottom: 20px;
+  position: relative;
+  left: 1em;
+  
+  
  
  }
  /*color and siz horizontal line*/
  hr {
-  background-color: hsl(215, 19%, 54%);
+  background-color: hsl(215, 32%, 27%);
   height: 1px;
   border: none;
+  position: relative;
+  bottom: 7.8em;
+
    
  }
  /*Size, color and rounded edge* image avatar*/
  .avatar{
-  max-width: 35px; 
-  height: 35px;
+  max-width: 30px; 
+  height: 30px;
   border: solid;
   border-width: 1px  ;
 border-color: white;
 border-radius: 20px 20px 20px 20px;
+margin-bottom: 10px;
+position: relative;
+bottom: 7.8em;
  }
 /* size clock but I don't know how to place it*/
- .montre {
-  width: 20px;
-  height: 20px;
+ .montre1 {
+  width: 1px;
+  height: 1px;
+  margin-top: 1px;
+  margin-bottom: 1px;
+  margin-left: 200px;
+  margin-right: 50px;
+  padding: 1px;
+  position: relative;
+  bottom: 0.3em; left: 0.01em;
   /*margin: 0px 0px 0px 200px; */
   
+ }
+ .montre {
+  width: 18px;
+  height: 18px;
+  margin-top: -10px;
+  margin-bottom: 0px;
+  margin-left: 15px;
+  margin-right: 50px;
+  padding: 1px;
+ }
+ .prix {
+  font-family:'Outfit', sans-serif;
+  /*font-weight: bold;*/
+  font-size: 15px; 
+  color: hsl(178, 100%, 50%);
+  font-weight: 600;
+  margin-bottom: 20px;
+  position: relative;
+  left: 1.5em; bottom: 10.5em;
+
+ }
+
+ .days {
+   font-size: 16px;
+   font-family: 'Outfit', sans-serif;
+   font-weight: 400;
+   position: relative;
+   bottom: 3.3em; left: 15em;
+   color: hsl(215, 51%, 70%);
+ }
+
+ .author {
+  font-size: 15px; 
+  font-family: 'Outfit', sans-serif;
+  font-weight: 400;
+  position: relative;
+  bottom: 1.5em; left: 3.4em;
+  color: hsl(215, 51%, 70%);
+ }
+
+ .name {
+  font-size: 15px;
+  font-family: 'Outfit', sans-serif;
+  font-weight: 400;
+  position: relative;
+  bottom: 3.75em; left: 8.7em;
  }
   
   
